<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".acitivties.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002">

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:padding="5dp"
            android:src="@drawable/user" />
        <com.skydoves.powerspinner.PowerSpinnerView
            android:id="@+id/roleSpinnerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/spinner_border_bg"
            android:focusable="false"
            android:foreground="?attr/selectableItemBackground"
            android:hint="@string/selectRole"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            app:spinner_arrow_gravity="end"
            app:spinner_arrow_padding="8dp"
            app:spinner_arrow_tint="@color/light_blue_login"
            app:spinner_divider_color="@color/black"
            app:spinner_divider_show="false"
            app:spinner_divider_size="0.4dp"
            app:spinner_item_array="@array/role"
            app:spinner_popup_animation="dropdown"
            app:spinner_popup_background="@color/white"
            app:spinner_popup_elevation="14dp" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/name"
            android:inputType="textNoSuggestions"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/email"
            android:inputType="textNoSuggestions|textEmailAddress"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/userUSN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/usn"
            android:inputType="textNoSuggestions"
            android:maxLength="10"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/userPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/phoneNumber"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_bg_all_side"
            android:text="@string/signUp"
            app:backgroundTint="@color/light_blue_login" />

        <TextView
            android:id="@+id/alreadyUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/alreadyAUser"
            android:textAlignment="viewEnd" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>